We need to answer "what do we do?"

--- a/src/index.html
+++ b/src/index.html
@@ -197,6 +197,36 @@
 
 <main>
 
+  <!-- Featueres -->
+<div class="relative bg-white pt-16 pb-32 overflow-hidden">
+  <div class="mt-10">
+    <div class="lg:mx-auto lg:max-w-7xl lg:px-8 lg:grid lg:grid-cols-2 lg:grid-flow-col-dense lg:gap-24">
+      <div class="px-4 max-w-xl mx-auto sm:px-6 lg:py-32 lg:max-w-none lg:mx-0 lg:px-0 lg:col-start-2">
+        <div>
+          <div class="mt-6">
+            <h2 class="text-3xl font-extrabold tracking-tight text-gray-900">
+              Simplify your Data Security Story
+            </h2>
+            <p class="mt-4 text-lg text-gray-500">
+              Peacemakr's Open-Source SDKs unify all your E2E-Encryption behind a single simple interface. Engineers integrate end-to-end Data Security across all your products and services faster than any other solution. Your Security Control Panel distributes your dynamic security policies, even after you've shipped. Win new customers in regulated industries without runaway costs or risky time-to-market. 
+            </p>
+            <div class="mt-6">
+              <a href="" class="inline-flex px-4 py-2 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700">
+                E2E-Encryption SDKs on Github
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="mt-12 sm:mt-16 lg:mt-0 lg:col-start-1">
+        <div class="pr-4 -ml-48 sm:pr-6 md:-ml-16 lg:px-0 lg:m-0 lg:relative lg:h-full">
+          <img class="w-full rounded-xl shadow-xl ring-1 ring-black ring-opacity-5 lg:absolute lg:right-0 lg:h-full lg:w-auto lg:max-w-none" src="./images/github.png" alt="Customer profile user interface">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
     <!-- CONTROL PANEL SCREEN SHOTS -->
 
     <div class="bg-gray-50">
