Ok. I'm starting to buy it.

--- a/src/index.html
+++ b/src/index.html
@@ -205,21 +205,26 @@
         <div>
           <div class="mt-6">
             <h2 class="text-3xl font-extrabold tracking-tight text-gray-900">
-              Simplify your Data Security Story
+              Quickly Simplify Your Data Security
             </h2>
             <p class="mt-4 text-lg text-gray-500">
-              Peacemakr's Open-Source SDKs unify all your E2E-Encryption behind a single simple interface. Engineers integrate end-to-end Data Security across all your products and services faster than any other solution. Your Security Control Panel distributes your dynamic security policies, even after you've shipped. Win new customers in regulated industries without runaway costs or risky time-to-market. 
+              Peacemakr's E2E-Encryption-as-a-Service unifies your data security behind a simple open-source interface. This enables engineers to quickly integrate end-to-end data security across all products and services, faster than any other solution. Your Security Control Panel manages dynamic security policies across your entire ecosystem, meaning you're never locked into yesterday's security decisions.
+
+              <br><br>
+
+              Win new customers in regulated industries quickly, without runaway costs or risky time-to-market delays.
+
             </p>
-            <div class="mt-6">
+            <div class="mt-8 text-center">
               <a href="" class="inline-flex px-4 py-2 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700">
-                E2E-Encryption SDKs on Github
+                Open-Source E2E-Encryption SDKs on Github
               </a>
             </div>
           </div>
         </div>
       </div>
-      <div class="mt-12 sm:mt-16 lg:mt-0 lg:col-start-1">
-        <div class="pr-4 -ml-48 sm:pr-6 md:-ml-16 lg:px-0 lg:m-0 lg:relative lg:h-full">
+      <div class="mt-12 sm:mt-16 lg:mt-0 lg:col-start-1 rounded-xl">
+        <div class="pr-4 -ml-48 sm:pr-6 md:-ml-16 lg:px-0 lg:m-0 lg:relative lg:h-full rounded-xl">
           <img class="w-full rounded-xl shadow-xl ring-1 ring-black ring-opacity-5 lg:absolute lg:right-0 lg:h-full lg:w-auto lg:max-w-none" src="./images/github.png" alt="Customer profile user interface">
         </div>
       </div>
