Updates from the group

--- a/src/solutions.html
+++ b/src/solutions.html
@@ -196,7 +196,7 @@
                     <a href="#"
                        class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
                         onclick="location.href='mailto:info@peacemakr.io'">
-                        Reqeust E-Book
+                        Request E-Book
                     </a>
                 </div>
             </div>
