--- a/src/engineers.html
+++ b/src/engineers.html
@@ -167,13 +167,15 @@
             <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
                 <div class="sm:text-center lg:text-left">
                     <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
-                        <span class="block xl:inline">Engineers<br/></span>
-                        <span class="block text-indigo-600 xl:inline">that secure your data</span>
+                        <span class="block xl:inline">Open-Source SDKs<br></span>
+                        <span class="block text-indigo-600 xl:inline">One Simple Interface
+
+</span>
                     </h1>
-                    <p id="type it out"
+                    <!-- <p id="type it out"
                             class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
                         Proven technologies that solve complex data security problems. One simple interface. Finally. 
-                    </p>
+                    </p> -->
                 </div>
             </main>
         </div>
