--- a/src/index.html
+++ b/src/index.html
@@ -163,12 +163,12 @@
                 </span>
                 </h1>
                 <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-xl lg:text-lg xl:text-xl">
-                  Data Security simplified.
+                  Data security simplified.
                 </p>
             </div>
 
             <div class="mt-0 relative max-w-min sm:mx-auto">
-              <svg class="absolute top-0 left-1/2 transform translate-x-20 -translate-y-8" width="640" height="784" fill="none" viewBox="0 0 640 784">
+              <svg class="absolute top-0 left-1/2 transform -translate-x-20 -translate-y-8" width="640" height="784" fill="none" viewBox="0 0 640 784">
                     <defs>
                       <pattern id="9ebea6f4-a1f5-4d96-8c4e-4c2abf658047" x="118" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
                         <rect x="0" y="0" width="4" height="4" class="text-indigo-200" fill="currentColor" />
@@ -187,6 +187,17 @@
         <svg width="100" height="50">
             <rect width="300" height="50" style="fill:rgb(255,255,255);stroke-width:0;stroke:rgb(0,0,0)" />
         </svg>
+        <div class="mt-0 relative max-w-min sm:mx-auto">
+              <svg class="absolute top-0 right-1/2 transform -translate-x-20 -translate-y-24" width="640" height="784" fill="none" viewBox="0 0 640 784">
+                    <defs>
+                      <pattern id="9ebea6f4-a1f5-4d96-8c4e-4c2abf658047" x="118" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
+                        <rect x="0" y="0" width="4" height="4" class="text-indigo-200" fill="currentColor" />
+                      </pattern>
+                    </defs>
+                    <rect y="" width="300" height="850" class="text-gray-100" fill="currentColor" />
+                    <rect x="118" width="404" height="784" fill="url(#9ebea6f4-a1f5-4d96-8c4e-4c2abf658047)" />
+                  </svg>
+            </div>
     </div>
     <!-- <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
         <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full
@@ -199,7 +210,7 @@
 
   <!-- Featueres -->
 <div class="relative bg-white pt-16 pb-32 overflow-hidden">
-  <div class="mt-10">
+  <div class="mt-0">
     <div class="lg:mx-auto lg:max-w-7xl lg:px-8 lg:grid lg:grid-cols-2 lg:grid-flow-col-dense lg:gap-24">
       <div class="px-4 max-w-xl mx-auto sm:px-6 lg:py-32 lg:max-w-none lg:mx-0 lg:px-0 lg:col-start-2">
         <div>
@@ -309,7 +320,7 @@
         <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
             <div>
                 <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
-                    <span class="block">Start with our <span class="block text-indigo-600 xl:inline">free tier</span> today.</span>
+                    <span class="block">Start with our <span class="text-indigo-600">free tier</span> today.</span>
                 </h2>
                 <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">Includes unlimited clients, unlimited encryptions and decryptions operations, 1,000 API Calls per Month, and Bronze support.</p>
             </div>
