Fix a bunch of stuff folks found tonight

--- a/src/index.html
+++ b/src/index.html
@@ -183,21 +183,23 @@
               </div>
             </div>
           </div>
+           <!-- These are the dots to the left -->
+          <div class="mt-1 relative max-w-min sm:mx-auto">
+                <svg class="absolute top-3 right-1/2 transform -translate-x-20 -translate-y-24" width="640" height="784" fill="none" viewBox="0 0 640 784">
+                      <defs>
+                        <pattern id="9ebea6f4-a1f5-4d96-8c4e-4c2abf658047" x="118" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
+                          <rect x="0" y="0" width="4" height="4" class="text-indigo-200" fill="currentColor" />
+                        </pattern>
+                      </defs>
+                      <rect x="140" y="50" width="370" height="200" class="text-gray-100" fill="currentColor" />
+                      <rect x="150" y="44" width="460" height="80" fill="url(#9ebea6f4-a1f5-4d96-8c4e-4c2abf658047)" />
+                </svg>
+          </div>
         </main>
         <svg width="100" height="50">
             <rect width="300" height="50" style="fill:rgb(255,255,255);stroke-width:0;stroke:rgb(0,0,0)" />
         </svg>
-        <div class="mt-0 relative max-w-min sm:mx-auto">
-              <svg class="absolute top-0 right-1/2 transform -translate-x-20 -translate-y-24" width="640" height="784" fill="none" viewBox="0 0 640 784">
-                    <defs>
-                      <pattern id="9ebea6f4-a1f5-4d96-8c4e-4c2abf658047" x="118" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
-                        <rect x="0" y="0" width="4" height="4" class="text-indigo-200" fill="currentColor" />
-                      </pattern>
-                    </defs>
-                    <rect y="" width="300" height="850" class="text-gray-100" fill="currentColor" />
-                    <rect x="118" width="404" height="784" fill="url(#9ebea6f4-a1f5-4d96-8c4e-4c2abf658047)" />
-                  </svg>
-            </div>
+       
     </div>
     <!-- <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
         <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full
@@ -215,11 +217,11 @@
       <div class="px-4 max-w-xl mx-auto sm:px-6 lg:py-32 lg:max-w-none lg:mx-0 lg:px-0 lg:col-start-2">
         <div>
           <div class="mt-6">
-            <h2 class="text-3xl font-extrabold tracking-tight text-gray-900">
+            <h2 class="text-4xl font-extrabold tracking-tight text-gray-900">
               Quickly Simplify Your Data Security
             </h2>
             <p class="mt-4 text-lg text-gray-500">
-              Peacemakr's E2E-Encryption-as-a-Service unifies your data security behind a simple open-source interface. This enables engineers to quickly integrate end-to-end data security across all products and services, faster than any other solution. Your Security Control Panel manages dynamic security policies across your entire ecosystem, meaning you're never locked into yesterday's security decisions.
+              Peacemakr's E2E-Encryption-as-a-Service unifies your data security behind a simple open-source interface. This enables engineers to quickly integrate end-to-end data security across all your products and services, faster than any other solution. Your Security Control Panel manages dynamic security policies across your entire ecosystem, meaning you're never locked into yesterday's security decisions.
 
               <br><br>
 
@@ -250,7 +252,7 @@
     <div class="space-y-12 lg:grid lg:grid-cols-3 lg:gap-8 lg:space-y-0">
       <div class="space-y-5 sm:space-y-4">
         <h2 class="text-3xl font-extrabold tracking-tight sm:text-4xl">Meet Your New <p class="text-indigo-600">Security Control Panel</p></h2>
-        <p class="text-xl text-gray-500">One of the reasons data security is difficult, is because we tend to ship hard-coded algorithms, key lengths, modes of operations, and other configurations. With Peacemakr, all security configurations are centrally managed and control behind a single pane of glass.</p>
+        <p class="text-xl text-gray-500">Data security is difficult because we tend to ship hard-coded algorithms, key lengths, modes of operations, and other configurations. With Peacemakr, all security configurations are centrally managed and controlled behind a single pane of glass.</p>
       </div>
       <div class="lg:col-span-2">
         <ul class="space-y-12 sm:grid sm:grid-cols-2 sm:gap-x-6 sm:gap-y-12 sm:space-y-0 lg:gap-x-8">
@@ -289,7 +291,7 @@
                 <p class="text-indigo-600">Zero-Trust Ready</p>
               </div>
               <div class="text-lg">
-                <p class="text-gray-500">You should never have to trust your securit provider for security.</p>
+                <p class="text-gray-500">You should never have to trust your provider for security.</p>
               </div>
             </div>
           </li>
@@ -320,7 +322,7 @@
         <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
             <div>
                 <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
-                    <span class="block">Start with our <span class="text-indigo-600">free tier</span> today.</span>
+                    <span class="block">Start with our <span class="text-indigo-600">free tier</span> today</span>
                 </h2>
                 <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">Includes unlimited clients, unlimited encryptions and decryptions operations, 1,000 API Calls per Month, and Bronze support.</p>
             </div>
