--- a/src/solutions.html
+++ b/src/solutions.html
@@ -272,7 +272,7 @@
               Insurance and NAIC Data Security Requirements
             </dt>
             <dd class="mt-2 text-base text-gray-500">
-              Insurers, Insurance Producers, Regulated Entities, and State Insurance Regulators all require service providers have controls in place to protect data. Peacemakr's E2E-Encryption guarantees compliance and facilitates business collaborations that would otherwise be out of reach.
+              Insurers, Insurance Producers, Regulated Entities, and State Insurance Regulators all require service providers to have controls in place to protect data. Peacemakr's E2E-Encryption guarantees compliance and facilitates business collaborations that would otherwise be out of reach.
             </dd>
           </div>
         </div>
