--- a/src/index.html
+++ b/src/index.html
@@ -168,7 +168,7 @@
             </div>
 
             <div class="mt-0 relative max-w-min sm:mx-auto">
-              <svg class="absolute top-0 left-1/2 transform -translate-x-20 -translate-y-8" width="640" height="784" fill="none" viewBox="0 0 640 784">
+              <!-- <svg class="absolute top-0 left-1/2 transform -translate-x-20 -translate-y-8" width="640" height="784" fill="none" viewBox="0 0 640 784">
                     <defs>
                       <pattern id="9ebea6f4-a1f5-4d96-8c4e-4c2abf658047" x="118" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
                         <rect x="0" y="0" width="4" height="4" class="text-indigo-200" fill="currentColor" />
@@ -176,11 +176,14 @@
                     </defs>
                     <rect y="72" width="640" height="640" class="text-gray-100" fill="currentColor" />
                     <rect x="118" width="404" height="784" fill="url(#9ebea6f4-a1f5-4d96-8c4e-4c2abf658047)" />
-                  </svg>
-              <div class="relative mx-auto w-full shadow-2xl">
+                  </svg> -->
+              <div class="min-w-max w-full">
+                <img class="rounded-lg h-80 shadow-2xl" src="./images/cyber.jpg">
+              </div>
+              <!-- <div class="relative mx-auto w-full shadow-2xl">
                   <span class="sr-only">Watch our video to learn more</span>
                 <iframe width="492" height="315" align="center" src="https://www.youtube.com/embed/_nAPPOUBIhw?rel=0&modestbranding=1&controls=0" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; gyroscope" allowfullscreen></iframe>
-              </div>
+              </div> -->
             </div>
           </div>
            <!-- These are the dots to the left -->
