--- a/src/pricing.html
+++ b/src/pricing.html
@@ -175,7 +175,7 @@
         </div>
     </div>
     <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
-        <img class="object-cover" src="/images/bikes.jpg" alt="">
+        <img class="object-cover" src="/images/plans.jpg" alt="">
     </div>
 </div>
 
