--- a/src/solutions.html
+++ b/src/solutions.html
@@ -176,7 +176,7 @@
     </div>
     <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
         <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full
-        " src="/images/opendoors.jpg" alt="">
+        " src="/images/bank.jpg" alt="">
     </div>
 </div>
 
