Few more issues (thx Bob)

--- a/src/engineers.html
+++ b/src/engineers.html
@@ -190,7 +190,7 @@
 <main>
 
     <!-- CALL TO ACTION -->
-    <div class="bg-gray-50">
+    <div class="bg-white">
       <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:px-8">
         <div class="bg-indigo-600 rounded-lg shadow-xl overflow-hidden lg:grid lg:grid-cols-2 lg:gap-4">
           <div class="pt-10 pb-12 px-6 sm:pt-16 sm:px-16 lg:py-16 lg:pr-0 xl:py-20 xl:px-20">
@@ -213,7 +213,7 @@
     </div>
 
     <!-- CTA 2 -->
-    <div class="bg-white">
+    <div class="bg-gray-50">
         <div class="mx-auto py-12 px-4 max-w-7xl sm:px-6 lg:px-8 lg:py-24 ">
             <div class="space-y-12 lg:grid lg:grid-cols-3 lg:gap-8 lg:space-y-0">
                 <div class="self-center">
@@ -845,7 +845,7 @@
     </div>
 
     <!-- At scale block -->
-    <div class="relative bg-gray-50 py-16 sm:py-24 lg:py-32">
+    <div class="relative bg-white py-16 sm:py-24 lg:py-32">
         <div class="mx-auto max-w-md px-4 text-center sm:max-w-3xl sm:px-6 lg:px-8 lg:max-w-7xl">
             <h2 class="text-base font-semibold tracking-wider text-indigo-600 uppercase">Effective</h2>
             <p class="mt-2 text-3xl font-extrabold text-gray-900 tracking-tight sm:text-4xl">
