--- a/src/about_us.html
+++ b/src/about_us.html
@@ -100,7 +100,7 @@
         To: "opacity-0 scale-95"
     -->
 
-            <div id="menu" class="absolute top-0 inset-x-0 p-2 transition transform origin-top-right hidden">
+            <div id="menu" class="z-50 absolute top-0 inset-x-0 p-2 transition transform origin-top-right hidden">
                 <div class="rounded-lg shadow-md bg-white ring-1 ring-black ring-opacity-5 overflow-hidden">
                     <div class="px-5 pt-4 flex items-center justify-between">
                         <div>
