--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
                 </nav>
             </div>
 
-            <div id="menu" class="absolute top-0 inset-x-0 p-2 transition transform origin-top-right hidden">
+            <div id="menu" class="z-50 absolute top-0 inset-x-0 p-2 transition transform origin-top-right hidden">
                 <div class="rounded-lg shadow-md bg-white ring-1 ring-black ring-opacity-5 overflow-hidden">
                     <div class="px-5 pt-4 flex items-center justify-between">
                         <div>
@@ -327,13 +327,12 @@
                 <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
                     <span class="block">Start with our <span class="text-indigo-600">free tier</span> today</span>
                 </h2>
-                <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">Includes unlimited clients, unlimited encryptions and decryptions operations, 1,000 API Calls per Month, and Bronze support.</p>
+                <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">Includes unlimited clients, unlimited encryption and decryption operations, 1,000 API Calls per month, and Bronze support.</p>
             </div>
             <div class="mt-8 flex lg:mt-0">
                 <div class="hadow">
-                    <a href="#"
-                       class="font-extrabold text-white sm:text-3xl inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
-                        onclick="location.href='/pricing.html'">
+                    <a href="/pricing.html"
+                       class="font-extrabold text-white sm:text-3xl inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
                         See Available Plans
                     </a>
                 </div>
