--- a/src/pricing.html
+++ b/src/pricing.html
@@ -83,16 +83,18 @@
                     </div>
                     <div class="hidden md:block md:ml-10 md:pr-4 md:space-x-8">
 
-                        <a href="solutions.html" class="font-medium text-gray-500 hover:text-gray-900">Solutions</a>
+                        <a href="solutions.html" class="font-medium text-gray-500 hover:text-indigo-600">Solutions</a>
 
-                        <a href="engineers.html" class="font-medium text-gray-500 hover:text-gray-900">Engineers</a>
+                        <a href="engineers.html" class="font-medium text-gray-500 hover:text-indigo-600">Engineers</a>
 
-                        <a href="pricing.html" class="font-medium text-gray-500 hover:text-gray-900">Pricing</a>
+                        <a href="pricing.html" class="font-medium text-gray-900 hover:text-indigo-600">Pricing</a>
 
-                        <a href="media.html" class="font-medium text-gray-500 hover:text-gray-900">Media</a>
+                        <a href="media.html" class="font-medium text-gray-500 hover:text-indigo-600">Media</a>
+
+                        <a> <span class="text-2xl text-gray-900"> | </span> </a>
 
                         <a href="https://admin.peacemakr.io/#/login"
-                           class="font-medium text-indigo-600 hover:text-indigo-500">Login</a>
+                           class="bg-indigo-600 rounded-lg px-3 py-1 font-medium text-gray-100 hover:bg-indigo-700">Login</a>
                     </div>
                 </nav>
             </div>
