These all speak to engineers, so, lets put them in engineering page

--- a/src/engineers.html
+++ b/src/engineers.html
@@ -191,6 +191,112 @@
 
 <main>
 
+      <!-- Featueres -->
+<div class="relative bg-white pt-16 pb-32 overflow-hidden">
+  <div class="mt-0">
+    <div class="lg:mx-auto lg:max-w-7xl lg:px-8 lg:grid lg:grid-cols-2 lg:grid-flow-col-dense lg:gap-24">
+      <div class="px-4 max-w-xl mx-auto sm:px-6 lg:py-32 lg:max-w-none lg:mx-0 lg:px-0 lg:col-start-2">
+        <div>
+          <div class="mt-6">
+            <h2 class="text-4xl font-extrabold tracking-tight text-gray-900">
+              Open-Source E2E-Encryption
+            </h2>
+            <p class="mt-4 text-lg text-gray-500">
+              Peacemakr's Open-Source E2E-Encryption SDKs raise the security bar and eliminates the barrier to entry. Join the movement and quickly simplify your data security with open-source SDKs, E2E-Encryption service, and automated key lifecycle management.
+
+              <br><br>
+
+              Encrypt data today, without worrying about backward compatability, cross platform portability, or changing security requirements.
+
+            </p>
+            <div class="mt-8 text-center">
+              <a href="" class="inline-flex px-4 py-2 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700">
+                See all E2E-Encryption SDKs
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="mt-12 sm:mt-16 lg:mt-0 lg:col-start-1 rounded-xl">
+        <div class="pr-4 -ml-48 sm:pr-6 md:-ml-16 lg:px-0 lg:m-0 lg:relative lg:h-full rounded-xl">
+          <img class="w-full rounded-xl shadow-xl ring-1 ring-black ring-opacity-5 lg:absolute lg:right-0 lg:h-full lg:w-auto lg:max-w-none" src="./images/github.png" alt="Customer profile user interface">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+    <!-- CONTROL PANEL SCREEN SHOTS -->
+
+    <div class="bg-gray-50">
+  <div class="mx-auto py-12 px-4 max-w-7xl sm:px-6 lg:px-8 lg:py-24">
+    <div class="space-y-12 lg:grid lg:grid-cols-3 lg:gap-8 lg:space-y-0">
+      <div class="space-y-5 sm:space-y-4">
+        <h2 class="text-3xl font-extrabold tracking-tight sm:text-4xl">Meet Your New <p class="text-indigo-600">Security Control Panel</p></h2>
+        <p class="text-xl text-gray-500">Data security can be difficult because it's easy to ship hard-coded algorithms, key lengths, modes of operations, and other configurations. With Peacemakr, all security configurations are centrally managed and controlled behind a single pane of glass.</p>
+      </div>
+      <div class="lg:col-span-2">
+        <ul class="space-y-12 sm:grid sm:grid-cols-2 sm:gap-x-6 sm:gap-y-12 sm:space-y-0 lg:gap-x-8">
+          <li>
+            <div class="space-y-4">
+              <div class="aspect-w-2 aspect-h-2">
+                <img class="object-cover rounded-lg" src="./images/screenshot3.png" alt="">
+              </div>
+              <div class="text-lg leading-6 font-medium space-y-1">
+                <p class="text-indigo-600">Secure By Default</p>
+              </div>
+              <div class="text-lg">
+                <p class="text-gray-500">Even if you never change a single setting, we got you covered.</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="space-y-4">
+              <div class="aspect-w-3 aspect-h-2">
+                <img class="object-cover rounded-lg" src="./images/screenshot1.png" alt="">
+              </div>
+              <div class="text-lg leading-6 font-medium space-y-1">
+                <p class="text-indigo-600">Powerful Visibility</p>
+              </div>
+              <div class="text-lg">
+                <p class="text-gray-500">Quickly identify who or what has access to protected data.</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="space-y-4">
+              <div class="aspect-w-3 aspect-h-2">
+                <img class="object-cover rounded-lg" src="./images/screenshot2.png" alt="">
+              </div>
+              <div class="text-lg leading-6 font-medium space-y-1">
+                <p class="text-indigo-600">Zero-Trust Ready</p>
+              </div>
+              <div class="text-lg">
+                <p class="text-gray-500">You should never have to trust your provider for security.</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="space-y-4">
+              <div class="aspect-w-3 aspect-h-2">
+                <img class="object-cover rounded-lg" src="./images/screenshot4.png" alt="">
+              </div>
+              <div class="text-lg leading-6 font-medium space-y-1">
+                <p class="text-indigo-600">Customizable Security Policy</p>
+              </div>
+              <div class="text-lg">
+                <p class="text-gray-500">Your Security Policies govern how often keys automatically rotate.</p>
+              </div>
+            </div>
+          </li>
+
+          <!-- More items... -->
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
     <!-- CALL TO ACTION -->
     <div class="bg-white">
       <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:px-8">
