--- a/src/index.html
+++ b/src/index.html
@@ -82,16 +82,18 @@
                     </div>
                     <div class="hidden md:block md:ml-10 md:pr-4 md:space-x-8">
 
-                        <a href="solutions.html" class="font-medium text-gray-500 hover:text-gray-900">Solutions</a>
+                        <a href="solutions.html" class="font-medium text-gray-500 hover:text-indigo-600">Solutions</a>
 
-                        <a href="engineers.html" class="font-medium text-gray-500 hover:text-gray-900">Engineers</a>
+                        <a href="engineers.html" class="font-medium text-gray-500 hover:text-indigo-600">Engineers</a>
 
-                        <a href="pricing.html" class="font-medium text-gray-500 hover:text-gray-900">Pricing</a>
+                        <a href="pricing.html" class="font-medium text-gray-500 hover:text-indigo-600">Pricing</a>
 
-                        <a href="media.html" class="font-medium text-gray-500 hover:text-gray-900">Media</a>
+                        <a href="media.html" class="font-medium text-gray-500 hover:text-indigo-600">Media</a>
+
+                        <a> <span class="text-2xl text-gray-900"> | </span> </a>
 
                         <a href="https://admin.peacemakr.io/#/login"
-                           class="font-medium text-indigo-600 hover:text-indigo-500">Login</a>
+                           class="bg-indigo-600 rounded-lg px-3 py-1 font-medium text-gray-100 hover:bg-indigo-700">Login</a>
                     </div>
                 </nav>
             </div>
@@ -157,13 +159,13 @@
           <div class="lg:grid lg:grid-cols-2 lg:gap-8 items-start">
             <div class="sm:text-center md:max-w-2xl md:mx-auto w-full lg:text-left">
               <h1>
-                <span class="mt-1 block text-4xl tracking-tight font-extrabold sm:text-6xl xl:text-7xl">
-                  <span class="block text-gray-900">Peacemakr</span>
-                  <span class="block text-indigo-600">E2E-Encryption<br>as-a-Service</span>
+                <span class="mt-1 block text-sxl tracking-tight font-extrabold sm:text-4xl xl:text-5xl">
+                  <span class="block text-gray-900 sm:text-6xl xl:text-7xl">Peacemakr</span>
+                  <span class="block text-indigo-600">E2E-Encryption<br>at your service</span>
                 </span>
                 </h1>
-                <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-xl lg:text-lg xl:text-xl">
-                  Data security simplified.
+                <!-- <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-xl lg:text-lg xl:text-xl">
+                  Data  security simplified.-->
                 </p>
             </div>
 
@@ -213,115 +215,8 @@
 
 <main>
 
-  <!-- Featueres -->
-<div class="relative bg-white pt-16 pb-32 overflow-hidden">
-  <div class="mt-0">
-    <div class="lg:mx-auto lg:max-w-7xl lg:px-8 lg:grid lg:grid-cols-2 lg:grid-flow-col-dense lg:gap-24">
-      <div class="px-4 max-w-xl mx-auto sm:px-6 lg:py-32 lg:max-w-none lg:mx-0 lg:px-0 lg:col-start-2">
-        <div>
-          <div class="mt-6">
-            <h2 class="text-4xl font-extrabold tracking-tight text-gray-900">
-              Quickly Simplify Your Data Security
-            </h2>
-            <p class="mt-4 text-lg text-gray-500">
-              Peacemakr's E2E-Encryption-as-a-Service unifies your data security behind a simple open-source interface. This enables engineers to quickly integrate end-to-end data security across all your products and services, faster than any other solution. Your Security Control Panel manages dynamic security policies across your entire ecosystem, meaning you're never locked into yesterday's security decisions.
-
-              <br><br>
-
-              Win new customers in regulated industries quickly, without runaway costs or risky time-to-market delays.
-
-            </p>
-            <div class="mt-8 text-center">
-              <a href="" class="inline-flex px-4 py-2 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700">
-                Open-Source E2E-Encryption SDKs on Github
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="mt-12 sm:mt-16 lg:mt-0 lg:col-start-1 rounded-xl">
-        <div class="pr-4 -ml-48 sm:pr-6 md:-ml-16 lg:px-0 lg:m-0 lg:relative lg:h-full rounded-xl">
-          <img class="w-full rounded-xl shadow-xl ring-1 ring-black ring-opacity-5 lg:absolute lg:right-0 lg:h-full lg:w-auto lg:max-w-none" src="./images/github.png" alt="Customer profile user interface">
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-    <!-- CONTROL PANEL SCREEN SHOTS -->
-
+<!-- CTA See Plans -->
     <div class="bg-gray-50">
-  <div class="mx-auto py-12 px-4 max-w-7xl sm:px-6 lg:px-8 lg:py-24">
-    <div class="space-y-12 lg:grid lg:grid-cols-3 lg:gap-8 lg:space-y-0">
-      <div class="space-y-5 sm:space-y-4">
-        <h2 class="text-3xl font-extrabold tracking-tight sm:text-4xl">Meet Your New <p class="text-indigo-600">Security Control Panel</p></h2>
-        <p class="text-xl text-gray-500">Data security is difficult because we tend to ship hard-coded algorithms, key lengths, modes of operations, and other configurations. With Peacemakr, all security configurations are centrally managed and controlled behind a single pane of glass.</p>
-      </div>
-      <div class="lg:col-span-2">
-        <ul class="space-y-12 sm:grid sm:grid-cols-2 sm:gap-x-6 sm:gap-y-12 sm:space-y-0 lg:gap-x-8">
-          <li>
-            <div class="space-y-4">
-              <div class="aspect-w-2 aspect-h-2">
-                <img class="object-cover rounded-lg" src="./images/screenshot3.png" alt="">
-              </div>
-              <div class="text-lg leading-6 font-medium space-y-1">
-                <p class="text-indigo-600">Secure By Default</p>
-              </div>
-              <div class="text-lg">
-                <p class="text-gray-500">Even if you never change a single setting, we got you covered.</p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="space-y-4">
-              <div class="aspect-w-3 aspect-h-2">
-                <img class="object-cover rounded-lg" src="./images/screenshot1.png" alt="">
-              </div>
-              <div class="text-lg leading-6 font-medium space-y-1">
-                <p class="text-indigo-600">Powerful Visibility</p>
-              </div>
-              <div class="text-lg">
-                <p class="text-gray-500">Quickly identify who or what has access to protected data.</p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="space-y-4">
-              <div class="aspect-w-3 aspect-h-2">
-                <img class="object-cover rounded-lg" src="./images/screenshot2.png" alt="">
-              </div>
-              <div class="text-lg leading-6 font-medium space-y-1">
-                <p class="text-indigo-600">Zero-Trust Ready</p>
-              </div>
-              <div class="text-lg">
-                <p class="text-gray-500">You should never have to trust your provider for security.</p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="space-y-4">
-              <div class="aspect-w-3 aspect-h-2">
-                <img class="object-cover rounded-lg" src="./images/screenshot4.png" alt="">
-              </div>
-              <div class="text-lg leading-6 font-medium space-y-1">
-                <p class="text-indigo-600">Customizable Security Policy</p>
-              </div>
-              <div class="text-lg">
-                <p class="text-gray-500">Your Security Policies govern how often keys automatically rotate.</p>
-              </div>
-            </div>
-          </li>
-
-          <!-- More items... -->
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-    <!-- CTA See Plans -->
-    <div class="bg-white">
         <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
             <div>
                 <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
@@ -333,7 +228,7 @@
                 <div class="hadow">
                     <a href="/pricing.html"
                        class="font-extrabold text-white sm:text-3xl inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
-                        See Available Plans
+                        See available plans
                     </a>
                 </div>
             </div>
@@ -341,7 +236,68 @@
     </div>
 
 
-    <section class="bg-gray-50 overflow-hidden">
+<!-- TELL PEOPLE WHAT? (3 distinguishers) -->
+<div class="bg-white">
+  <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8">
+    <div class="max-w-3xl mx-auto text-center">
+      <h2 class="text-4xl font-extrabold text-gray-900">Quickly Simplify Your Data Security</h2>
+      <p class="mt-4 text-center text-lg text-indigo-600"> 
+              Win new customers in regulated industries,<br>without runaway costs or risky delays.</p>
+              <br>
+    </div>
+    <dl class="mt-12 space-y-10 sm:space-y-0 sm:grid sm:grid-cols-1 sm:gap-x-6 sm:gap-y-12 lg:grid-cols-3 lg:gap-x-8">
+      <div class="flex">
+        <!-- Heroicon name: outline/check -->
+        <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+        </svg>
+        <div class="ml-3">
+          <dt class="text-lg leading-6 font-medium text-gray-900">
+            Raise your security bar with Zero-Trust
+          </dt>
+          <dd class="mt-2 text-base text-gray-500">
+            Customize your security strength to meet the highest standard, without having to place your trust in external vendors.
+          </dd>
+        </div>
+      </div>
+
+      <div class="flex">
+        <!-- Heroicon name: outline/check -->
+        <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+        </svg>
+        <div class="ml-3">
+          <dt class="text-lg leading-6 font-medium text-gray-900">
+            Drop-in solution
+          </dt>
+          <dd class="mt-2 text-base text-gray-500">
+            From client registration to key rotation, Peacemakr has the tough problems handled so you can focus on your business goals. 
+          </dd>
+        </div>
+      </div>
+
+      <div class="flex">
+        <!-- Heroicon name: outline/check -->
+        <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+        </svg>
+        <div class="ml-3">
+          <dt class="text-lg leading-6 font-medium text-gray-900">
+            Open-source transparency
+          </dt>
+          <dd class="mt-2 text-base text-gray-500">
+            Engineers always know what’s happening and how it works. Peacemakr’s E2E-Encryption SDKs are available to the community.
+          </dd>
+        </div>
+      </div>
+
+    </dl>
+  </div>
+</div>
+
+
+<!-- ENLAI -->
+<section class="bg-gray-50 overflow-hidden">
   <div class="relative max-w-7xl mx-auto pt-20 pb-12 px-4 sm:px-6 lg:px-8 lg:py-20">
     <svg class="absolute top-full left-0 transform translate-x-80 -translate-y-24 lg:hidden" width="784" height="404" fill="none" viewBox="0 0 784 404" aria-hidden="true">
       <defs>
@@ -392,6 +348,112 @@
     </div>
   </div>
 </section>
+
+
+<!-- TELL THEM AGAIN! another 3 things -->
+<!-- CONTROL PANEL SCREEN SHOTS -->
+
+    <div class="bg-gray-50">
+  <div class="mx-auto py-12 px-4 max-w-7xl sm:px-6 lg:px-8 lg:py-24">
+    <div class="space-y-12 lg:grid lg:grid-cols-3 lg:gap-8 lg:space-y-0">
+      <div class="space-y-5 sm:space-y-4">
+        <h2 class="text-3xl font-extrabold tracking-tight sm:text-4xl">Meet Your New <p class="text-indigo-600">Security Control Panel</p></h2>
+        <p class="text-xl text-gray-500">Data security can be difficult because it's easy to ship hard-coded algorithms, key lengths, modes of operations, and other configurations. With Peacemakr, all security configurations are centrally managed and controlled behind a single pane of glass.</p>
+      </div>
+      <div class="lg:col-span-2">
+        <ul class="space-y-12 sm:grid sm:grid-cols-2 sm:gap-x-6 sm:gap-y-12 sm:space-y-0 lg:gap-x-8">
+          <li>
+            <div class="space-y-4">
+              <div class="aspect-w-2 aspect-h-2">
+                <img class="object-cover rounded-lg" src="./images/screenshot3.png" alt="">
+              </div>
+
+              <div class="flex">
+                <!-- Heroicon name: outline/check -->
+                <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                </svg>
+                <div class="ml-3">
+                  <dt class="text-lg text-gray-900 leading-6 font-medium text-gray-900">
+                    Secure by default
+                  </dt>
+                  <dd class="mt-2 text-base text-gray-500">
+                    Start secure, and stay secure. We have you covered.
+                  </dd>
+                </div>
+              </div>
+          </li>
+          <li>
+            <div class="space-y-4">
+              <div class="aspect-w-3 aspect-h-2">
+                <img class="object-cover rounded-lg" src="./images/screenshot1.png" alt="">
+              </div>
+              <div class="flex">
+                <!-- Heroicon name: outline/check -->
+                <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                </svg>
+                <div class="ml-3">
+                  <dt class="text-lg text-gray-900 leading-6 font-medium text-gray-900">
+                    Powerful visibility
+                  </dt>
+                  <dd class="mt-2 text-base text-gray-500">
+                    Quickly identify who or what has access to protected data.
+                  </dd>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="space-y-4">
+              <div class="aspect-w-3 aspect-h-2">
+                <img class="object-cover rounded-lg" src="./images/screenshot2.png" alt="">
+              </div>
+
+              <div class="flex">
+                <!-- Heroicon name: outline/check -->
+                <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                </svg>
+                <div class="ml-3">
+                  <dt class="text-lg text-gray-900 leading-6 font-medium text-gray-900">
+                    Zero-Trust
+                  </dt>
+                  <dd class="mt-2 text-base text-gray-500">
+                    You should never have to trust your provider for security.
+                  </dd>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="space-y-4">
+              <div class="aspect-w-3 aspect-h-2">
+                <img class="object-cover rounded-lg" src="./images/screenshot4.png" alt="">
+              </div>
+
+              <div class="flex">
+                <!-- Heroicon name: outline/check -->
+                <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                </svg>
+                <div class="ml-3">
+                  <dt class="text-lg text-gray-900 leading-6 font-medium text-gray-900">
+                    Customizable Security Policy
+                  </dt>
+                  <dd class="mt-2 text-base text-gray-500">
+                    Your Security Policies govern how often keys automatically rotate.
+                  </dd>
+                </div>
+            </div>
+          </li>
+
+          <!-- More items... -->
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
 
     
 
