--- a/src/solutions.html
+++ b/src/solutions.html
@@ -210,10 +210,15 @@
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="lg:text-center">
       <p class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">
-        Simple Solutions to Hard Problems
+        Pass data security audits with pride and confidence
       </p>
-      <p class="mt-4 max-w-2xl text-xl text-gray-500 lg:mx-auto">
-        
+      <center>
+      <div class="self-center flex max-w-2xl tracking-tight">
+        <p class="mt-4 text-left text-xl text-gray-500"></p>
+      </div>
+      <center>
+      <p class="mt-4 max-w-2xl text-xl text-left text-gray-500 lg:mx-auto">
+        Peacemakr's E2E-Encryption-as-a-Service unifies your data security behind a simple open-source interface. This enables engineers to quickly integrate end-to-end data security across all your products and services, faster than any other solution. When your security requirements change, simply update your security policies in your Security Control Panel and Peacemakr update your entire ecosystem.
       </p>
     </div>
 
