Put the video back in for now, I hate stock images

--- a/src/index.html
+++ b/src/index.html
@@ -159,7 +159,7 @@
           <div class="lg:grid lg:grid-cols-2 lg:gap-8 items-start">
             <div class="sm:text-center md:max-w-2xl md:mx-auto w-full lg:text-left">
               <h1>
-                <span class="mt-1 block text-sxl tracking-tight font-extrabold sm:text-4xl xl:text-5xl">
+                <span class="mt-1 block text-sxl tracking-tight font-extrabold sm:text-6xl xl:text-7xl">
                   <span class="block text-gray-900 sm:text-6xl xl:text-7xl">Peacemakr</span>
                   <span class="block text-indigo-600">E2E-Encryption<br>at your service</span>
                 </span>
@@ -170,7 +170,7 @@
             </div>
 
             <div class="mt-0 relative max-w-min sm:mx-auto">
-              <!-- <svg class="absolute top-0 left-1/2 transform -translate-x-20 -translate-y-8" width="640" height="784" fill="none" viewBox="0 0 640 784">
+              <svg class="absolute top-0 left-1/2 transform -translate-x-20 -translate-y-8" width="640" height="784" fill="none" viewBox="0 0 640 784">
                     <defs>
                       <pattern id="9ebea6f4-a1f5-4d96-8c4e-4c2abf658047" x="118" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
                         <rect x="0" y="0" width="4" height="4" class="text-indigo-200" fill="currentColor" />
@@ -178,14 +178,14 @@
                     </defs>
                     <rect y="72" width="640" height="640" class="text-gray-100" fill="currentColor" />
                     <rect x="118" width="404" height="784" fill="url(#9ebea6f4-a1f5-4d96-8c4e-4c2abf658047)" />
-                  </svg> -->
-              <div class="min-w-max w-full">
+                  </svg>
+<!--               <div class="min-w-max w-full">
                 <img class="rounded-lg h-80 shadow-2xl" src="./images/cyber.jpg">
-              </div>
-              <!-- <div class="relative mx-auto w-full shadow-2xl">
-                  <span class="sr-only">Watch our video to learn more</span>
-                <iframe width="492" height="315" align="center" src="https://www.youtube.com/embed/_nAPPOUBIhw?rel=0&modestbranding=1&controls=0" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; gyroscope" allowfullscreen></iframe>
               </div> -->
+              <div class="relative mx-auto w-full shadow-2xl">
+                  <span class="sr-only">Watch our video to learn more</span>
+                <iframe width="492" height="315" align="center" src="https://www.youtube.com/embed/-NSjMbaBnYo?rel=0&modestbranding=1&controls=0" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; gyroscope" allowfullscreen></iframe>
+              </div>
             </div>
           </div>
            <!-- These are the dots to the left -->
