Last few touchups

--- a/src/engineers.html
+++ b/src/engineers.html
@@ -211,7 +211,7 @@
             </p>
             <div class="mt-8 text-center">
               <a href="" class="inline-flex px-4 py-2 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700">
-                See all E2E-Encryption SDKs
+                See SDKs on GitHub
               </a>
             </div>
           </div>
@@ -228,7 +228,7 @@
 
 
     <!-- CALL TO ACTION -->
-    <div class="bg-white">
+<!--     <div class="bg-white">
       <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:px-8">
         <div class="bg-indigo-600 rounded-lg shadow-xl overflow-hidden lg:grid lg:grid-cols-2 lg:gap-4">
           <div class="pt-10 pb-12 px-6 sm:pt-16 sm:px-16 lg:py-16 lg:pr-0 xl:py-20 xl:px-20">
@@ -248,7 +248,7 @@
 
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- CTA 2 -->
     <div class="bg-gray-50">
