--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
                         <a> <span class="text-2xl text-gray-900"> | </span> </a>
 
                         <a href="https://admin.peacemakr.io/#/login"
-                           class="bg-indigo-600 rounded-lg px-3 py-1 font-medium text-gray-100 hover:bg-indigo-700">Login</a>
+                           class="bg-indigo-600 rounded-md px-3 py-1 font-medium text-gray-100 hover:bg-indigo-700">Login</a>
                     </div>
                 </nav>
             </div>
@@ -241,8 +241,7 @@
   <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8">
     <div class="max-w-3xl mx-auto text-center">
       <h2 class="text-4xl font-extrabold text-gray-900">Quickly Simplify Your Data Security</h2>
-      <p class="mt-4 text-center text-lg text-indigo-600"> 
-              Win new customers in regulated industries,<br>without runaway costs or risky delays.</p>
+      
               <br>
     </div>
     <dl class="mt-12 space-y-10 sm:space-y-0 sm:grid sm:grid-cols-1 sm:gap-x-6 sm:gap-y-12 lg:grid-cols-3 lg:gap-x-8">
