Fix mobile font :)

--- a/src/index.html
+++ b/src/index.html
@@ -159,7 +159,7 @@
           <div class="lg:grid lg:grid-cols-2 lg:gap-8 items-start">
             <div class="sm:text-center md:max-w-2xl md:mx-auto w-full lg:text-left">
               <h1>
-                <span class="mt-1 block text-sxl tracking-tight font-extrabold sm:text-6xl xl:text-7xl">
+                <span class="text-4xl mt-1 block text-sxl tracking-tight font-extrabold sm:text-6xl xl:text-7xl">
                   <span class="block text-gray-900 sm:text-6xl xl:text-7xl">Peacemakr</span>
                   <span class="block text-indigo-600">E2E-Encryption<br>at your service</span>
                 </span>
