Point signup's to the correct page

--- a/src/index.html
+++ b/src/index.html
@@ -267,7 +267,7 @@
         </svg>
         <div class="ml-3">
           <dt class="text-lg leading-6 font-medium text-gray-900">
-            Drop-in solution
+            Drop-in E2E-Encryption-as-a-Service
           </dt>
           <dd class="mt-2 text-base text-gray-500">
             From client registration to key rotation, Peacemakr has the tough problems handled so you can focus on your business goals. 
@@ -469,7 +469,7 @@
           <p class="mt-4 text-lg leading-6 text-indigo-200"> Let Peacemakr protect your data, so that you can focus on value-add growth. Stop losing deals to skeptical security experts. 95% of data breaches are made possible by human error.</p>
           <br>
           <p class="mt-4 text-lg leading-6 text-indigo-200">Peacemakr eliminates the guesswork. </p>
-          <a href="https://admin.peacemakr.io/" class="mt-8 bg-white border border-transparent rounded-md shadow px-5 py-3 inline-flex items-center text-base font-medium text-indigo-600 hover:bg-indigo-50">Sign up for free</a>
+          <a href="https://admin.peacemakr.io/#/signup" class="mt-8 bg-white border border-transparent rounded-md shadow px-5 py-3 inline-flex items-center text-base font-medium text-indigo-600 hover:bg-indigo-50">Sign up for free</a>
         </div>
       </div>
       <div class="-mt-6 aspect-w-5 aspect-h-3 md:aspect-w-2 md:aspect-h-1">
