--- a/src/pricing.html
+++ b/src/pricing.html
@@ -286,9 +286,8 @@
                                     
                                 </ul>
                                 <div class="rounded-md shadow">
-                                    <a href="https://admin.peacemakr.io"
+                                    <a href="https://admin.peacemakr.io/#/signup"
                                        class="flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
-                                       onclick="location.href='https://admin.peacemakr.io'"
                                        aria-describedby="tier-standard">
                                         Sign Up for Free
                                     </a>
