update meta properties for analytics

--- a/src/solutions.html
+++ b/src/solutions.html
@@ -12,7 +12,7 @@
     <meta property="og:description"
           content="Data Security simplified."/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://peacemakr.io/"/>
+    <meta property="og:url" content="https://peacemakr.io/solutions.html"/>
     <meta itemprop="name" content="Peacemakr">
     <meta itemprop="description"
           content="Data Security simplified.">
