--- a/src/solutions.html
+++ b/src/solutions.html
@@ -212,8 +212,8 @@
       <p class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">
         Pass Audits with Confidence
       </p>
-      <div class="flex border-4 md:justify-center">
-        <div class="mt-4 max-w-sm border-4 md:text-left tracking-tight md:text-center text-lg text-gray-500"> 
+      <div class="flex md:justify-center">
+        <div class="mt-4 max-w-sm md:text-left tracking-tight md:text-center text-lg text-gray-500"> 
               Win new customers in regulated industries, without runaway costs or risky delays.</div>
             </div>
               <br>
