Update to latest video, and fix width for iphone

--- a/src/index.html
+++ b/src/index.html
@@ -184,7 +184,7 @@
               </div> -->
               <div class="relative mx-auto w-full shadow-2xl">
                   <span class="sr-only">Watch our video to learn more</span>
-                <iframe width="492" height="315" align="center" src="https://www.youtube.com/embed/-NSjMbaBnYo?rel=0&modestbranding=1&controls=0" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; gyroscope" allowfullscreen></iframe>
+                <iframe width="458" height="315" align="center" src="https://www.youtube.com/embed/lR_UvdRImSI?rel=0&modestbranding=1&controls=0" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; gyroscope" allowfullscreen></iframe>
               </div>
             </div>
           </div>
